fix:The team img on homepage when on mobile were not aligned

--- a/src/components/AboutUsSection/AboutUs.styles.css
+++ b/src/components/AboutUsSection/AboutUs.styles.css
@@ -10,11 +10,15 @@
   justify-content: space-between;
 }
 
+.about-us .the-team {
+  display: flex;
+  gap: 1rem;
+}
+
 .about-us img {
-  width: 10rem;
-  height: 10rem;
+  width: 9rem;
+  height: 9rem;
   border-radius: 16px;
-  margin: 2rem;
 }
 
 .about-us p {
@@ -36,7 +40,7 @@
     top: 1.5rem
   }
 
-  .about-us img:last-child {
+  .about-us .the-team img:last-child {
     right: 18rem;
     top: 10rem
   }
